# cf_ddns

./: Cargo.toml  README.md  flake.nix
src/: cloudflare.rs  fetchers.rs  lib.rs  main.rs
src/cloudflare/: api.rs
src/cloudflare/api/: dns.rs  zone.rs
src/fetchers/: disabled.rs  ipify.rs  nest.rs
