[package]
name = "ddns_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
cloudflare = { git = 'https://github.com/cowboylaserkittenjetshark/cloudflare-rs.git', features = ["blocking"] }
directories = "5.0.1"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = { version = "1.0.188", features = ["derive"] }
tabled = "0.14.0"
thiserror = "1.0.48"
toml = "0.8.0"
typetag = "0.2.13"
